--- a/internship/Dockerfile
+++ b/internship/Dockerfile
@@ -1,41 +1,41 @@
-# FROM openjdk:17-jdk-alpine
+# # First stage: build
+# FROM maven:3.8.5-openjdk-17 AS build
+
+# # Set working directory
 # WORKDIR /app
-# ADD target/backend-docker.jar backend-docker.jar
-# COPY . .
+
+# # Copy the Maven wrapper and pom.xml
+# COPY src /app/src
+# COPY mvnw pom.xml ./
+
+# # Make the Maven wrapper executable
+# RUN chmod +x mvnw
+
+# # Build the application
 # RUN ./mvnw clean package -DskipTests
-# EXPOSE 8080
-# ENTRYPOINT ["java", "-jar", "/backend-docker.jar"]
 
+# # Second stage: runtime
 # FROM openjdk:17-jdk-alpine
+
+# # Set working directory
 # WORKDIR /app
 
+# # Copy the built JAR file from the build stage
+# COPY --from=build /app/target/backend-docker.jar backend-docker.jar
 
+# # Expose port 8080
+# EXPOSE 8080
 
-# Set working directory
-WORKDIR /app
-
-# Clone the GitHub repository
-RUN git clone https://github.com/jaquen20/Course-selection-project.git .
-
-# Ensure the Maven wrapper is executable
-RUN chmod +x mvnw
-
-# Build the application
-RUN ./mvnw clean package -DskipTests
-
-# Use a minimal Java runtime image for the final image
-FROM openjdk:17-jdk-alpine
+# # Run the JAR file
+# ENTRYPOINT ["java", "-jar", "/app/backend-docker.jar"]
+FROM maven:3.8.5-openjdk-17 AS build
 
 # Set working directory
 WORKDIR /app
 
-# Copy the built JAR file from the build stage
-COPY --from=build /app/target/backend-docker.jar backend-docker.jar
+# Copy the Maven wrapper and pom.xml
+COPY src /app/src
+COPY pom.xml ./
 
-# Expose port 8080
-EXPOSE 8080
-
-# Run the JAR file
-ENTRYPOINT ["java", "-jar", "/app/backend-docker.jar"]
-
-
+# Build the application using Maven directly
+RUN mvn clean package -DskipTests
